--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Music List
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content color="light">
+  <ion-list inset="true">
+    <ion-item>
+      <ion-label>Everything u are</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Kami Belum Tentu</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>o,Tuan</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Tropical Therapy</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Matsuri</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
