--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,118 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Jadwal Kuliah
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-accordion-group>
+    <ion-accordion value="first">
+      <ion-item slot="header" color="light">
+        <ion-label>Senin</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        <ion-item>
+          <ion-label>
+            <h3>Praktikum PGPBL</h3>
+            <p>Pemrograman Geospasial Perangkat Bergerak Lanjut</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>Metopen</h3>
+            <p>Teori metodologi pendidikan</p>
+          </ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+    <ion-accordion value="second">
+      <ion-item slot="header" color="light">
+        <ion-label>Selasa</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        <ion-item>
+          <ion-label>
+            <h3>Pendidikan Pancasila</h3>
+            <p>Matakuliah Wajib di Fakultas Filsafat jam 09.00</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>PAI</h3>
+            <p>Pendidkan Agama Islam</p>
+          </ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="third">
+      <ion-item slot="header" color="light">
+        <ion-label>Rabu</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        <ion-item>
+          <ion-label>
+            <h3>Teori Kewirus</h3>
+            <p>Teori Usaha dan Kewirausahaan</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>Praktikum SDGL</h3>
+            <p>Sains Data Spatial Lanjut</p>
+          </ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="fourth">
+      <ion-item slot="header" color="light">
+        <ion-label>Kamis</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        <ion-item>
+          <ion-label>
+            <h3>PKN</h3>
+            <p>Pendidikan Kewarganegaraan di Filsafat</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>Asisten SIGPL</h3>
+            <p>Asisten Praktikum SIGPL</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>Praktikum APSIG-SDA</h3>
+            <p>Apliskasi SIG Untuk Sumber Daya Air</p>
+          </ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="five">
+      <ion-item slot="header" color="light">
+        <ion-label>Jumat</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        <ion-item>
+          <ion-label>
+            <h3>Praktikum APSIG-PPK</h3>
+            <p>Aplikasi SIG untuk Pesisir dan Kelautan</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            <h3>Bahasa Indonesia</h3>
+            <p>MKWK di FIB</p>
+          </ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
+
+  </ion-accordion-group>
 </ion-content>
