--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -14,5 +14,10 @@
       <ion-icon aria-hidden="true" name="square"></ion-icon>
       <ion-label>Komponen</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="maps" href="/maps">
+      <ion-icon aria-hidden="true" name="map"></ion-icon>
+      <ion-label>Maps</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
